shifted cursor to crosshair, fixed the selection box and image stretch issue

--- a/content.css
+++ b/content.css
@@ -1,4 +1,4 @@
 #selection-box {
-    z-index: 10000;
-  }
-  
+  z-index: 10000;
+  cursor: crosshair;
+}
